@@ -31,6 +31,6 @@ For up-to-date source, see http://www.cpan.org/SITES.html
 and look for the directory authors/id/P/PJ/PJB
 See also http://www.pjb.com.au/comp/tea.html
 
-This is version 2.10
+This is version 2.11
 
 Peter J Billam            http://www.pjb.com.au/comp/contact.html
